--- a/discography.html
+++ b/discography.html
@@ -1,9 +1,58 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Discography</title>
-</head>
-<body>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
+		<meta name="description" content="King Gizzard & the Lizard Wizard tribute">
+		<meta name="keywords" content="about, tourdates, discography, videos">
+		<meta name="author" content="Mike Dodd">
+		<title>KGATLW | Home</title>
+		<link rel="stylesheet" type="text/css" href="./css/style.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/fontawesome.css" integrity="sha384-vd1e11sR28tEK9YANUtpIOdjGW14pS87bUBuOIoBILVWLFnS+MCX9T6MMf0VdPGq" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/brands.css" integrity="sha384-n9+6/aSqa9lBidZMRCQHTHKJscPq6NW4pCQBiMmHdUCvPN8ZOg2zJJTkC7WIezWv" crossorigin="anonymous">
+	</head>
 
-</body>
+	<body>
+		<header>
+
+			<section class="socialmedia">
+					<a href="https://www.facebook.com/kinggizzardandthelizardwizard/" target="_blank">
+					<i class="fab fa-facebook-f fa-lg"></i>
+					</a>
+					<a href="https://twitter.com/kinggizzardband?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank">
+					<i class="fab fa-twitter fa-lg"></i>
+					</a>
+					<a href="https://www.instagram.com/kinggizzard/?hl=en" target="_blank">
+					<i class="fab fa-instagram fa-lg"></i>
+					</a>
+					<a href="https://www.youtube.com/user/KinggizzardTV/videos" target="_blank">
+					<i class="fab fa-youtube fa-lg"></i>
+					</a>
+					<a href="https://kinggizzard.bandcamp.com/music" target="_blank">
+					<i class="fab fa-bandcamp fa-lg"></i>
+					</a>
+				</section>
+
+			<div class="container">
+				<div id="bandname">
+					<img class="band-logo" src="./images/KGATLWlogo.png" alt="King Gizzard & The Lizard Wizard Logo">
+				</div>
+				<nav>
+					<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="theband.html">The Band</a></li>
+					<li class="current"><a href="discography.html">Discography</a></li>
+					<a href="https://flightlessrecords.com/" target="_blank">
+					<li>Store</li>
+					</a>
+					</ul>
+				</nav>
+				
+			</div>
+		</header>
+	
+		<footer>
+			<p>King Gizzard & The Lizard Wizard, Copyright &copy; 2019</p>
+		</footer>		
+	</body>
 </html>
