--- a/theband.html
+++ b/theband.html
@@ -39,8 +39,8 @@
 				</div>
 				<nav>
 					<ul>
-					<li class="current"><a href="index.html">Home</a></li>
-					<li><a href="theband.html">The Band</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li class="current"><a href="theband.html">The Band</a></li>
 					<li><a href="discography.html">Discography</a></li>
 					<a href="https://flightlessrecords.com/" target="_blank">
 					<li>Store</li>
@@ -50,32 +50,6 @@
 				
 			</div>
 		</header>
-
-		<section id="showcase">
-			<div class="container">
-			</div>
-		</section>
-
-		<section id="videos">
-			<div>
-				<iframe class="video1" width="560" height="315" src="https://www.youtube.com/embed/beIDKFwXam0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<iframe class="video2" width="560" height="315" src="https://www.youtube.com/embed/_un9PYsE1_g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			</div>
-		</section>
-
-		<section>
-			<div class="container">
-				<p class="album">FISHING FOR FISHIES OUT APRIL 26th</p>
-			</div>
-		</section>
-
-		<section>
-			<div>
-				<a id="link" href="https://flightlessrecords.com/collections/king-gizzard-the-lizard-wizard/products/king-gizzard-the-wizard-lizard-fishing-for-fishies-fire-gobi-limited-edition-pre-order" target="_blank">
-				<img id="new-album" src="./images/FFF.jpg" alt="Fishing For Fishies">
-				</a>
-			</div>
-		</section>
 
 		<footer>
 			<p>King Gizzard & The Lizard Wizard, Copyright &copy; 2019</p>
