--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
 	<body>
 		<header>
-
 			<section class="socialmedia">
 					<a href="https://www.facebook.com/kinggizzardandthelizardwizard/" target="_blank">
 					<i class="fab fa-facebook-f fa-lg"></i>
@@ -47,14 +46,10 @@
 					</a>
 					</ul>
 				</nav>
-				
 			</div>
 		</header>
 
-		<section id="showcase">
-			<div class="container">
-			</div>
-		</section>
+		<section id="bandpic1"></section>
 
 		<section id="videos">
 			<div>
