--- a/theband.html
+++ b/theband.html
@@ -8,6 +8,7 @@
 		<meta name="author" content="Mike Dodd">
 		<title>KGATLW | Home</title>
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Audiowide|Monoton" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/fontawesome.css" integrity="sha384-vd1e11sR28tEK9YANUtpIOdjGW14pS87bUBuOIoBILVWLFnS+MCX9T6MMf0VdPGq" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/brands.css" integrity="sha384-n9+6/aSqa9lBidZMRCQHTHKJscPq6NW4pCQBiMmHdUCvPN8ZOg2zJJTkC7WIezWv" crossorigin="anonymous">
 	</head>
@@ -47,9 +48,58 @@
 					</a>
 					</ul>
 				</nav>
-				
 			</div>
 		</header>
+
+		<section id="bandpic2"></section>
+
+		<section id="history">
+		<div class="container">
+	        <article id="main-col">
+	        <div>
+	          <h1 class="band-history">History</h1>
+	        </div>
+	        <div>
+	        	<h2>Formation (2010):</h2>
+	        	<p>The band members all grew up and went to school in the Deniliquin, Melbourne and Geelong areas. The boys started off as a group of friends jamming together, before a mutual friend asked them to play at a show. The band's name was created "last minute". Stu wanted to name the band "Gizzard Gizzard" while another band member wanted Jim Morrison's nickname "Lizard King". They eventually compromised with King Gizzard & the Lizard Wizard. Artist Jason Galea has created all of the band's album art, and a majority of thier music videos.</p><br>
+
+	        	<h2>Early EPs and 12 Bar Bruise (2011-2012):</h2>
+	        	<p>The band's first release, 2011's Anglesea, was released as a four-track EP.  It is named after Anglesea, the coastal town where Mackenzie grew up, and is currently not available for purshase, physically or digitally. The band's second release, Willoughby's Beach, was released by Shock Records on October 21, 2011. In December 2011, the band appeared at the Meredith Music Festival for the first time.</p>
+	        	<p>The band's first full-length album, 12 Bar Bruise, was released on September 7th, 2012. The 12-track garage rock album was self-recorded, and several tracks used unconventional recording methods. For example, the vocals for the album's title track were recorded through four Iphones placed around a room while Mackenzie sang into one of them.</p><br>
+
+	        	<h2>Eyes Like the Sky and Float Along – Fill Your Lungs (2013)</h2>
+	        	<p>King Gizzard & the Lizard Wizard's second full length album, Eyes Like the Sky, was released on February 22nd, 2013. Described as a "cult wester audio book", the album is narrated by Broderick Smith and tells a story of outlaws, child soldiers, Native Americans and gun fights, all set in the American frontier. The album was written collaboratively by Smith and Stu Mackenzie. When asked about the albums influences, Mackenzie said: "I love Western Films. I love bad guys and I love Red Dead Redemption. Oh, and I love evil guitars".</p>
+	        	<p>The band's third full-length album, Float Along - Fill Your Lungs was released on September 27th, 2013. King Gizzard shifted from garage rock to a more mellow folk and psychedelic sound on this eight track album.</p><br>
+
+	        	<h2>Oddments and I'm in Your Mind Fuzz (2014):</h2>
+	        	<p>Float Along - Fill Your Lungs was followed by Oddments, released on March 7th, 2014. Over the course of this 12-track album, the band takes a more melodic approach, and Mackenzie's vocals are more prominent. Oddments has been described as being "recorded through a woolen sock in an adjacent room".</p>
+	        	<p>The band's fifth full-length album, I'm in Your Mind Fuzz, was released on October 31, 2014. The 10-track album touches on elements of fantasy and lyrically delves into the concept of mind control. This was the first time the band took a "traditional" approach to writing and recording an album; the songs were written, the band rehearsed together, and they recorded the songs "as a band" in the studio. Pitchfork described the album as "opening with a sprint" and ending "with some of their best slow jams."</p><br>
+
+	        	<h2>Quarters! and Paper Mache Dream Balloon (2015):</h2>
+	        	<p>Quarters!, King Gizzard's sixth full-length album, was released on May 1st, 2015. The Album features four songs, each running for ten minutes and ten seconds, making each song a quarter of the album. Drawing upon jazz-fusion and acid rock, the album's more laid-back sound was described as "unlike anything else they've released before" and as "an album more likely to get your head bobbing and hips shaking as opposed to losing footwear in a violent mosh".</p>
+	        	<p>Later in the year, November 13th, the band released its seventh full-length album, Paper Mache Dream Balloon. This "concept-less concept album" features only acoustic instruments and was recorded on Mackenzie's parents' farm in country Victoria. The album features a "collection of short unrelated songs" described as "mellow, defuzzed psychedelia". The band released a music video for the song "Trapdoor". It was the band's first album to be released in the United States via ATO Records.</p><br>
+
+	        	<h2>Nonagon Infinity (2016):</h2>
+	        	<p>The band's eigth full-length album, Nonagon Infinity, was released worldwide on April 29th, 2016. Described by Mackenzie as a "never-ending album", it features nine songs connected by musical motifs which flow "seamlessly" into each other with the last track "linking straight back into the top of the opener like a sonic mobius strip". On March 8th the band released a video for the first single, "Gamma Knife". It contained a riff from the song "People Vultures" which was premiered on April 4th with a music video released on May 6th. The album received high praise from critics, with Pitchfork's Stuart Berman writing it "yields some of the most outrageous, exhilarating rock 'n' roll in recent memory." The band earned its first ARIA Award when Nonagon Infinity won the 2016 ARIA Award for Best Hard Rock or Heavt Metal Album.</p><br>
+
+	        	<h2>Five albums in one year (2017):</h2>
+	        	<p>The band's ninth full-length album, Flying Microtonal Banana, was recorded in the band's own studio and released on February 24th, 2017. Originally conceived as a record to be played on the Turkish baglama (a stringed instrument with moveable frets), Flying Microtonal Banana has been described as "a soaring take on microtonal music". Three tracks were issued in advance: "Rattlesnake", the opening track, in October 2016; "Nuclear Fusion" in December 2016; and "Sleep Drifter" in January 2017. The band released a music video for "Rattlesnake", directed by Jason Galea.</p>
+
+	        	<p>Another full-length album, Murder of the Universe, was released on June 23rd. Described by the band as a "concept album to end all concepts", it is divided into three chapters: The Tale of the Altered Beast; The Lord of Lightning vs Balrog; released May 30th; and Han-Tyunmi and the Muder of the Universe released April 11th. It is narrated by Leah Senior for the first two chapters, and a text-to-speech program for the final chapter. The band made their international television debut on April 17th performing "The Lord of Lightning" on Conan on TBS in the United States.</p>
+
+	        	<p>King Gizzard's next full-length album, Sketches of Brunswick East, a collaboration with Alex Brettin's psychedelic jazz project Mild High Club, was released on August 18th. Taking inspirations from Miles Davis' 1960 album Sketches of Spain, as well as the band's base recording location of Brunswick East in Melbourne, it is a jazz-improv album. Mackenzie described the record as "perhaps representing greater changes that are happening in the wider world, and (this is) our attempt to find beauty within a place that we spend so much time", referring to the constant changes in their neighbourhood.</p>
+
+	        	<p>King Gizzard's twelfth studio album, Polygondwanaland, was released as a free download on November 17th. The band encouraged fans and independent record labels to create their own pressings of the album, stating that "Polygondwanaland is FREE. Free as in, free.  Free to download and if you wish, free to make copies. Make tapes, make CD's, make records...Ever wanted to start your own record label? GO for it! Employ your mates, press wax, pack boxes. We don't own this record. You do. Go forth, share, enjoy." The album was promoted with the release of the first track, "Crumbling Castle", on October 18th. A music video created by Jason Galea accompanied its release on YouTube.</p>
+
+	        	<p>Mackenzie confirmed on December 7th that the fifth and final album to be released in 2017 would be coming "very, very late in the year". Two singles were digitally released less than a week later: "All is Known", which had previously been preformed live; and "Beginner's Luck", an entirely new song. On December 30th, the band posted on Facebook that Gumboot Soup, their fifth and final album of the year, would be released the following day. Mackenzie explained in an interview that the songs on Gumboot Soup are "definitely not B-sides or anything. They're more songs that didn't work in any of the rest of the four records, or they didn't fit into any of those categories that well, or they came together slightly after when those records came together."</p><br>
+
+	        	<h2>Fishing for Fishies (2019):</h2>
+	        	<p>Throughout 2018, King Gizzard continued to perform live shows, but did not release any new material. On January 21st, 2019, the band announced on their Instagram page that new music was in the works. On February 1st, the band put out a music video for their new single "Cyboogie" and release the song as a 7 inch single backed with "Acarine". A week later, they announced another Noth American tour and a show at Alexandria Palace in London in which they promised would feature "a new set, new songs, and whole new visual experience", and is being described as their biggest ever.</p>
+	        	<p>In early March, details of the band's at-the-time announced fourteenth album, Fishing for Fishies, were seemingly leaked onto webstores. The album title, cover and track listing were leaked, as well as 60-second previews, the entirety of the title track and a release date of April 26th. The band then confirmed this leak on March 11th by officially announcing the album through their Facebook and Instagram accounts with the same release date April 26th. A day later, the band officially released and uploaded a music video for the title track to YouTube.</p>
+	        </article>
+    	</div>
+    	</section>
+
 
 		<footer>
 			<p>King Gizzard & The Lizard Wizard, Copyright &copy; 2019</p>
