--- a/discography.html
+++ b/discography.html
@@ -14,7 +14,6 @@
 
 	<body>
 		<header>
-
 			<section class="socialmedia">
 					<a href="https://www.facebook.com/kinggizzardandthelizardwizard/" target="_blank">
 					<i class="fab fa-facebook-f fa-lg"></i>
@@ -49,6 +48,294 @@
 				</nav>
 			</div>
 		</header>
+
+		<section id="boxes">
+			<div class="container">
+				<div class="box">
+					<a href="https://kinggizzard.bandcamp.com/album/12-bar-bruise">
+					<img src="./images/12BarBruise.jpg">
+					</a>
+					<h4>12 Bar Bruise (2012)</h4>
+					<ul style="list-style-type:none;">
+						<li>1. Elbow (2:40)</li>
+						<li>2. Muckraker (3:00)</li>
+						<li>3. Nien (2:52)</li>
+						<li>4. 12 Bar Bruise (3:47)</li>
+						<li>5. Garage Liddiard (2:29)</li>
+						<li>6. Sam Cherry's Last Shot (2:49)</li>
+						<li>7. High Hopes Low (3:46)</li>
+						<li>8. Cut Throat Boogie (2:50)</li>
+						<li>9. Bloody Ripper (2:13)</li>
+						<li>10. Uh Oh, I called Mum (2:38)</li>
+						<li>11. Sea of Trees (3:15)</li>
+						<li>12. Footy Footy (1:59)</li>
+					</ul>
+				</div>
+				<div class="box">
+					<a href="https://kinggizzard.bandcamp.com/album/eyes-like-the-sky">
+					<img src="./images/ELTS.jpg">
+					</a>
+					<h4>Eyes Like the Sky (2013)</h4>
+					<ul style="list-style-type:none;">
+						<li>1. Eyes Like the Sky (3:17)</li>
+						<li>2. Year of Our Lord (2:57)</li>
+						<li>3. The Raid (2:24)</li>
+						<li>4. Drum Run (2:42)</li>
+						<li>5. Evil Man (3:54)</li>
+						<li>6. Fort Whipple (2:56)</li>
+						<li>7. The God Mans Goat Lust (3:17)</li>
+						<li>8. The Killing Ground (2:50)</li>
+						<li>9. Dust in the Wind (2:24)</li>
+						<li>10. Guns & Horses (1:08)</li>
+					</ul>
+				</div>
+				<div class="box">
+					<a href="https://kinggizzard.bandcamp.com/album/float-along-fill-your-lungs">
+					<img src="./images/FAFYL.jpg">
+					</a>
+					<h4>Float Along - Fill Your Lungs (2013)</h4>
+					<ul style="list-style-type:none;">
+						<li>1. Head On/Pill (15:59)</li>
+						<li>2. I Am Not a Man Unless I Have a Woman (2:55)</li>
+						<li>3. God Is Calling Me Back Home (4:24)</li>
+						<li>4. 30 Past 7 (3:43)</li>
+						<li>5. Let Me Mend the Past (2:30)</li>
+						<li>6. Mystery Jack (2:47)</li>
+						<li>7. Pop in My Step (2:51)</li>
+						<li>8. Float Along - Fill Your Lungs (6:45)</li>
+					</ul>
+				</div>
+			</div>
+		</section><br>
+
+		<section id="boxes">
+			<div class="container">
+				<div class="box">
+					<a href="https://kinggizzard.bandcamp.com/album/oddments">
+					<img src="./images/Oddments.jpg">
+					</a>
+					<h4>Oddments (2014)</h4>
+					<ul style="list-style-type:none;">
+						<li>1. Alluda Majaka (3:34)</li>
+						<li>2. Stressin (2:56)</li>
+						<li>3. Vegemite (2:45)</li>
+						<li>4. It's Got Old (2:58)</li>
+						<li>5. Work This Time (4:36)</li>
+						<li>6. ABABCd (0:17)</li>
+						<li>7. Sleepwalker (3:46)</li>
+						<li>8. Hot Wax (3:29)</li>
+						<li>9. Crying (2:56)</li>
+						<li>10. Pipe-Dream (1:01)</li>
+						<li>11. Homeless Man in Addidas (3:24)</li>
+						<li>12. Oddments (0:25)</li>
+					</ul>
+				</div>
+				<div class="box">
+					<a href="https://kinggizzard.bandcamp.com/album/im-in-your-mind-fuzz">
+					<img src="./images/IIYMF.jpg">
+					</a>
+					<h4>I'm in Your Mind Fuzz (2014)</h4>
+					<ul style="list-style-type:none;">
+						<li>1. I'm in Your Mind (3:34)</li>
+						<li>2. I'm Not in Your Mind (2:58)</li>
+						<li>3. Cellophane (3:11)</li>
+						<li>4. I'm in Your Mind Fuzz (2:52)</li>
+						<li>5. Empty (4:11)</li>
+						<li>6. Hot Water (3:24)</li>
+						<li>7. Am I in Heaven? (7:06)</li>
+						<li>8. Slow Jam 1 (2:55)</li>
+						<li>9. Satan Speeds Up (3:39)</li>
+						<li>10. Her and I (Slow Jam 2) (8:15)</li>
+					</ul>
+				</div>
+				<div class="box">
+					<a href="https://kinggizzard.bandcamp.com/album/quarters">
+					<img src="./images/Quarters.jpg">
+					</a>
+					<h4>Quarters! (2015)</h4>
+					<ul style="list-style-type:none;">
+						<li>1. The River (10:10)</li>
+						<li>2. Infinite Rise (10:10)</li>
+						<li>3. God Is in the Rhythm (10:10)</li>
+						<li>4. Lonely Steel Sheet Flyer (10:10)</li>
+					</ul>
+				</div>
+			</div>
+		</section><br>
+
+		<section id="boxes">
+			<div class="container">
+				<div class="box">
+					<a href="https://kinggizzard.bandcamp.com/album/paper-m-ch-dream-balloon">
+					<img src="./images/PMDB.jpg">
+					</a>
+					<h4>Paper Mache Dream Balloon (2015)</h4>
+					<ul style="list-style-type:none;">
+						<li>1. Sense (3:30)</li>
+						<li>2. Bone (2:16)</li>
+						<li>3. Dirt (2:50)</li>
+						<li>4. Paper Mache Dream Balloon (2:39)</li>
+						<li>5. Trapdoor (2:38)</li>
+						<li>6. Cold Cadaver (2:43)</li>
+						<li>7. The Bitter Boogie (4:29)</li>
+						<li>8. N.G.R.I. (Bloodstain) (2:25)</li>
+						<li>9. Time = Fate (2:26)</li>
+						<li>10. Time = $$$ (2:04)</li>
+						<li>11. Most of What I Like (3:17)</li>
+						<li>12. Paper Mache (2:29)</li>
+					</ul>
+				</div>
+				<div class="box">
+					<a href="https://kinggizzard.bandcamp.com/album/nonagon-infinity-2">
+					<img src="./images/Nonagon.jpg">
+					</a>
+					<h4>Nonagon Infinity (2016)</h4>
+					<ul style="list-style-type:none;">
+						<li>1. Robot Stop (5:22)</li>
+						<li>2. Big Fig Wasp (4:54)</li>
+						<li>3. Gamma Knife (4:21)</li>
+						<li>4. People-Vultures (4:45)</li>
+						<li>5. Mr. Beat (4:56)</li>
+						<li>6. Evil Death Roll (7:14)</li>
+						<li>7. Invisible Face (3:01)</li>
+						<li>8. Wah Wah (2:54)</li>
+						<li>9. Road Train (4:18)</li>
+					</ul>
+				</div>
+				<div class="box">
+					<a href="https://kinggizzard.bandcamp.com/album/flying-microtonal-banana">
+					<img src="./images/FMB.jpg">
+					</a>
+					<h4>Flying Microtonal Banana (2017)</h4>
+					<ul style="list-style-type:none;">
+						<li>1. Rattlesnake (7:48)</li>
+						<li>2. Melting (5:27)</li>
+						<li>3. Open Water (7:13)</li>
+						<li>4. Sleep Drifter (4:44)</li>
+						<li>5. Billabong Valley (3:34)</li>
+						<li>6. Anoxia (3:04)</li>
+						<li>7. Doom City (3:14)</li>
+						<li>8. Nuclear Fusion (4:15)</li>
+						<li>9. Flying Microtonal Banana (2:34)</li>
+					</ul>
+				</div>
+			</div>
+		</section><br>
+
+		<section id="boxes">
+			<div class="container">
+				<div class="box">
+					<a href="https://kinggizzard.bandcamp.com/album/murder-of-the-universe">
+					<img src="./images/MOTU.jpg">
+					</a>
+					<h4>Murder of the Universe (2017)</h4>
+					<ul style="list-style-type:none;">
+						<li>1. A New World (0:57)</li>
+						<li>2. Altered Beast I (2:23)</li>
+						<li>3. Alter Me I (0:45)</li>
+						<li>4. Altered Beast II (4:28)</li>
+						<li>5. Alter Me II (1:25)</li>
+						<li>6. Altered Beast III (2:14)</li>
+						<li>7. Alter Me III (1:26)</li>
+						<li>8. Altered Beast IV (5:10)</li>
+						<li>9. Life/Death (1:00)</li>
+						<li>10. Some Context (0:16)</li>
+						<li>11. The Reticent Raconteur (1:05)</li>
+						<li>12. The Lord of Lightning (5:06)</li>
+						<li>13. The Balrog (4:29)</li>
+						<li>14. The Floating Fire (1:54)</li>
+						<li>15. The Acrid Corpse (1:00)</li>
+						<li>16. Welcome to an Altered Future (0:55)</li>
+						<li>17. Digital Black (2:46)</li>
+						<li>18. Han-Tyumi, the Confused Cybord (2:21)</li>
+						<li>19. Soy-Protein Munt Machine (0:30)</li>
+						<li>20. Vomit Coffin (2:19)</li>
+						<li>21. Murder of the Universe (4:09)</li>
+					</ul>
+				</div>
+				<div class="box">
+					<a href="https://kinggizzard.bandcamp.com/album/sketches-of-brunswick-east">
+					<img src="./images/Sketches.jpg">
+					</a>
+					<h4>Sketches of Brunswick East (2017)</h4>
+					<ul style="list-style-type:none;">
+						<li>1. Sketches of Brunswick East (1:20)</li>
+						<li>2. Countdown (3:22)</li>
+						<li>3. D-Day (1:38)</li>
+						<li>4. Tezeta (3:30)</li>
+						<li>5. Cranes, Planes, Migraines (1:15)</li>
+						<li>6. The Spider and Me (3:16)</li>
+						<li>7. Sketches of Brunswick East II (3:26)</li>
+						<li>8. Dusk to Dawn on Lygon Street (3:02)</li>
+						<li>9. The Book (5:00)</li>
+						<li>10. A Journey to (S)hell (2:16)</li>
+						<li>11. Rolling Stoned (3:18)</li>
+						<li>12. You Can Be Your Silhouette (3:48)</li>
+						<li>13. Sketches of Brunswick East III (2:08)</li>
+					</ul>
+				</div>
+				<div class="box">
+					<a href="https://kinggizzard.bandcamp.com/album/polygondwanaland">
+					<img src="./images/Polygond.jpg">
+					</a>
+					<h4>Polygondwanaland (2017)</h4>
+					<ul style="list-style-type:none;">
+						<li>1. Crumbling Castle (10:46)</li>
+						<li>2. Polygondwanaland (3:33)</li>
+						<li>3. The Castle in the Air (2:48)</li>
+						<li>4. Deserted Dunes Welcome Weary Feet (3:34)</li>
+						<li>5. Inner Cell (3:56)</li>
+						<li>6. Loyalty (3:39)</li>
+						<li>7. Horology (2:52)</li>
+						<li>8. Tetrachromacy (3:31)</li>
+						<li>9. Searching... (4:04)</li>
+						<li>10. The Fourth Colour (6:13)</li>
+					</ul>
+				</div>
+			</div>
+		</section><br>
+
+		<section id="boxes">
+			<div class="container">
+				<div class="box">
+					<a href="https://kinggizzard.bandcamp.com/album/gumboot-soup">
+					<img src="./images/GumbootSoup.jpg">
+					</a>
+					<h4>Gumboot Soup (2017)</h4>
+					<ul style="list-style-type:none;">
+						<li>1. Beginner's Luck (4:25)</li>
+						<li>2. Greenhouse Heat Death (4:13)</li>
+						<li>3. Barefoot Desert (3:43)</li>
+						<li>4. Muddy Water (3:38)</li>
+						<li>5. Superposition (3:35)</li>
+						<li>6. Down the Sink (4:00)</li>
+						<li>7. The Great Chain of Being (4:50)</li>
+						<li>8. The Last Oasis (3:34)</li>
+						<li>9. All Is Known (3:34)</li>
+						<li>10. I'm Sleeping In (3:00)</li>
+						<li>11. The Wheel (5:36)</li>
+					</ul>
+				</div>
+				<div class="box">
+					<a href="">
+					<img src="./images/FFF.jpg">
+					</a>
+					<h4>Fishing for Fishies (2019)</h4>
+					<ul style="list-style-type:none;">
+						<li>1. Fishing for Fishies (5:01)</li>
+						<li>2. Boogieman Sam (4:41)</li>
+						<li>3. The Bird Song (4:24)</li>
+						<li>4. Plastic Boogie (3:02)</li>
+						<li>5. The Cruel Millennial (4:56)</li>
+						<li>6. Real's Not Real (3:40)</li>
+						<li>7. This Thing (4:00)</li>
+						<li>8. Acarine (5:24)</li>
+						<li>9. Cyboogie (6:48)</li>
+					</ul>
+				</div>
+			</div>
+		</section><br>
+
 	
 		<footer>
 			<p>King Gizzard & The Lizard Wizard, Copyright &copy; 2019</p>
