--- a/theband.html
+++ b/theband.html
@@ -97,6 +97,22 @@
 	        	<p>Throughout 2018, King Gizzard continued to perform live shows, but did not release any new material. On January 21st, 2019, the band announced on their Instagram page that new music was in the works. On February 1st, the band put out a music video for their new single "Cyboogie" and release the song as a 7 inch single backed with "Acarine". A week later, they announced another Noth American tour and a show at Alexandria Palace in London in which they promised would feature "a new set, new songs, and whole new visual experience", and is being described as their biggest ever.</p>
 	        	<p>In early March, details of the band's at-the-time announced fourteenth album, Fishing for Fishies, were seemingly leaked onto webstores. The album title, cover and track listing were leaked, as well as 60-second previews, the entirety of the title track and a release date of April 26th. The band then confirmed this leak on March 11th by officially announcing the album through their Facebook and Instagram accounts with the same release date April 26th. A day later, the band officially released and uploaded a music video for the title track to YouTube.</p>
 	        </article>
+
+	        <aside id="sidebar">
+	        	<div class="members">
+	        		<h3>Members:</h3>
+	        		<ul>
+	        			<li>Stu Mackenzie - vocals, guitar, bass guitar, piano, keyboards, synthesizer, flute, saxophone, clarinet, mellotron, sitar, zurna</li><br>
+	        			<li>Ambrose Kenny-Smith - harmonica, guitar, vocals, keyboards, synthesizer, organ, piano, percussion</li><br>
+	        			<li>Joey Walker - guitar, bass guitar, keyboards, synthesizer, organ, vocals, setar, percussion</li><br>
+	        			<li>Cook Craig - guitar, bass guitar, synthesizer, vocals, keyboards</li><br>
+	        			<li>Lucas Skinner - bass guitar, vocals, keyboards, piano</li><br>
+	        			<li>Michael Cavanagh - drums, percussion</li><br>
+	        			<li>Eric Moore - drums, percussion, theremin, keyboards, management</li><br>
+	        		</ul>
+	        	</div>
+	        </aside>
+
     	</div>
     	</section>
 
